src/objects/Time_Table_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Time Table Details</relationshipLabel>
        <relationshipName>Time_Table_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Table__c</fullName>
        <label>Time Table</label>
        <referenceTo>Time_Table__c</referenceTo>
        <relationshipLabel>Time Table Details</relationshipLabel>
        <relationshipName>Time_Table_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Table Detail</label>
    <nameField>
        <label>Time Table Det Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Table Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>